// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text with darkTheme should render 1`] = `
<Text
  darkTheme={true}
  label="label"
/>
`;

exports[`Text without darkTheme should render 1`] = `
<Text
  darkTheme={false}
  label="label"
/>
`;
